*ERROR* ring vcn_dec_0 timeout
Brief summary of the problem:
This happened to me a couple of times in the last few days. It might be a recent regression, around 5.10.11. The system became unresponsive and I had to power cycle it.
Jan 29 19:41:47 heidr kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* ring vcn_dec_0 timeout, signaled seq=38093, emitted seq=38093
Jan 29 19:41:47 heidr kernel: [drm:amdgpu_job_timedout [amdgpu]] *ERROR* Process information: process Isolated Web Co pid 5702 thread firefox-bi:cs0 pid 5792
Jan 29 19:41:47 heidr kernel: amdgpu 0000:09:00.0: amdgpu: GPU reset begin!
Jan 29 19:41:47 heidr firefox-nightly.desktop[5117]: [GFX1-]: GFX: RenderThread detected a device reset in PostUpdate
Jan 29 19:41:47 heidr firefox-nightly.desktop[5117]: [GFX1-]: GFX: RenderThread detected a device reset in PostUpdate
Jan 29 19:41:47 heidr firefox-nightly.desktop[5117]: [GFX1-]: Device reporting insufficient max texture size (0)
Jan 29 19:41:47 heidr firefox-nightly.desktop[5117]: [ERROR webrender::renderer] Device reporting insufficient max texture size (0)
Jan 29 19:41:47 heidr firefox-nightly.desktop[5117]: [GFX1-]: wr_window_new: MaxTextureSize
Jan 29 19:41:47 heidr firefox-nightly.desktop[5117]: [GFX1-]: Failed to connect WebRenderBridgeChild.
Jan 29 19:41:47 heidr firefox-nightly.desktop[5117]: [GFX1-]: Compositors might be mixed (5,1)
Jan 29 19:41:48 heidr kernel: clocksource: timekeeping watchdog on CPU23: Marking clocksource 'tsc' as unstable because the skew is too large:
Jan 29 19:41:48 heidr kernel: clocksource: 'hpet' wd_now: 3074da43 wd_last: 2f9c2392 mask: ffffffff
Jan 29 19:41:48 heidr kernel: clocksource: 'tsc' cs_now: 751ae9f38a90 cs_last: 751a72881582 mask: ffffffffffffffff
Jan 29 19:41:48 heidr kernel: tsc: Marking TSC unstable due to clocksource watchdog
Jan 29 19:41:48 heidr kernel: TSC found unstable after boot, most likely due to broken BIOS. Use 'tsc=unstable'.
Jan 29 19:41:48 heidr kernel: sched_clock: Marking unstable (37852531524436, -364261909)<-(37852170670773, -3414085)
Jan 29 19:41:50 heidr pipewire[2664]: alsa-pcm 0x557e492d2228: snd_pcm_status error: Broken pipe
Jan 29 19:41:50 heidr pipewire[2664]: 1 events suppressed
Jan 29 19:41:50 heidr pipewire[2664]: (alsa_output.pci-0000:09:00.1.hdmi-stereo-extra2-50) XRun! rate:1024/48000 count:2 time:37630440926 delay:223489576 max:223489576
Jan 29 19:41:50 heidr pipewire[2664]: (bluez_input.00:13:EF:A0:06:B1.a2dp-sink-98) client missed 187 wakeups
Jan 29 19:41:50 heidr pipewire[2664]: (alsa_output.pci-0000:0b:00.4.analog-stereo-43) client missed 1 wakeups
Jan 29 19:41:50 heidr pipewire[2664]: (alsa_output.usb-OnePlus_Technology_ED117_18835-00.analog-stereo-41) client missed 1 wakeups
Jan 29 19:41:50 heidr pipewire[2664]: (alsa_output.pci-0000:09:00.1.hdmi-stereo-extra2-50) client missed 1 wakeups
Jan 29 19:41:50 heidr kernel: clocksource: Switched to clocksource hpet
Jan 29 19:41:50 heidr kernel: [drm:gmc_v10_0_flush_vm_hub.constprop.0 [amdgpu]] *ERROR* Timeout waiting for sem acquire in VM flush!
Jan 29 19:41:51 heidr kernel: amdgpu 0000:09:00.0: amdgpu: failed to suspend display audio
Jan 29 19:41:59 heidr kernel: [drm] failed to load ucode id (32)
Jan 29 19:41:59 heidr kernel: [drm] psp command (0x6) failed and response status is (0x0)
Jan 29 19:42:12 heidr kernel: GpuWatchdog[395450]: segfault at 0 ip 000056302d8c0107 sp 00007f94a744d570 error 6 in signal-desktop[56302a6df000+53d6000]
Jan 29 19:42:12 heidr kernel: Code: 7d b7 00 79 09 48 8b 7d a0 e8 35 52 d3 fe 8b 83 00 01 00 00 85 c0 0f 84 91 00 00 00 48 8b 03 48 89 df be 01 00 00 00 ff 50 68 <c7> 04 25 00 00 00 00 37 13 00 00 c6 05 17 bc 6>
Jan 29 19:42:13 heidr systemd[1]: Created slice system-systemd\x2dcoredump.slice.
Jan 29 19:42:13 heidr systemd[1]: Started Process Core Dump (PID 395466/UID 0).
Jan 29 19:42:14 heidr systemd-coredump[395467]: Process 395406 (signal-desktop) of user 1000 dumped core.
Jan 29 19:42:14 heidr systemd[1]: systemd-coredump@0-395466-0.service: Succeeded.
Hardware description:
- CPU: Ryzen 5950X
- GPU: Radeon 6800 XT
- System Memory: 64 GB
- Display(s): Philips 326M6VJRMB
- Type of Diplay Connection: DP
System infomration:
- Distro name and Version: Arch Linux
- Kernel version: 5.10.11
- AMD package version:
mesa 21.1.0_devel.134201.5dc823304b1-1
How to reproduce the issue:
Random hang